--- a/SocialSharing/Podfile
+++ b/SocialSharing/Podfile
@@ -11,6 +11,10 @@ target 'SocialSharing' do
 	pod 'Fabric'
 	pod ‘TwitterKit’
 	pod ’TwitterCore’
+	pod ‘Google’
+	pod ‘Google/SignIn’
+	pod 'GoogleAPIClient/Calendar', '~> 1.0.2'
+    	pod 'GTMOAuth2', '~> 1.1.0'
 
 end
 
